--- a/package.json
+++ b/package.json
@@ -13,18 +13,22 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.13",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
   }
 }
