--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,9 @@
 PORT=
+DB=postgres://{user}:{password}@{hostname}:{port}/{database-name}
 DEV_DB=
 PROD_DB=
+PG_USER=
+PG_PWD=
+PG_PORT=
+PG_MAX_CONN=
 SECRET_KEY=
