--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.6",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.13",
+    "@types/pg": "^7.14.3",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
     "eslint": "^7.2.0",
@@ -23,12 +24,14 @@
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.5",
+    "winston": "^3.2.1"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.2.1"
   }
 }
