--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "bookshelf": "^1.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "knex": "^0.95.6",
     "morgan": "^1.10.0",
     "pg": "^8.2.1"
   }
