--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
     "outDir": "build",
     "strict": true /* Enable all strict type-checking options. */,
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
-    "inlineSourceMap": true /* Emit a single file with source maps instead of having a separate file. */,
-    "inlineSources": true /* Emit the source alongside the sourcemaps within a single file; requires '--inlineSourceMap' or '--sourceMap' to be set. */,
+    "sourceMap": true /* Emit a single file with source maps instead of having a separate file. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
   "include": ["src/**/*.ts"],
