--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bookshelf": "^1.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "joi": "^17.4.2",
     "knex": "^0.95.6",
     "morgan": "^1.10.0",
     "pg": "^8.2.1"
