--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "node build/index.js",
     "dev": "nodemon",
     "build": "rm -rf build && tsc",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "test": "jest --watchAll"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/jest": "^27.0.2",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.13",
     "@types/pg": "^7.14.3",
@@ -20,8 +22,11 @@
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
+    "jest": "^27.2.1",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.5",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5",
     "winston": "^3.2.1"
