--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-ts-template",
+  "name": "bug-tracker-api",
   "version": "1.0.0",
   "repository": "git@github.com:KaiserPhemi/node-ts-template.git",
   "author": "KaiserPhemi <kaiser.phemi@protonmail.ch>",
