--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "test": "jest --watchAll"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.6",
     "@types/jest": "^27.0.2",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.13",
     "@types/pg": "^7.14.3",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
     "eslint": "^7.2.0",
@@ -33,6 +35,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "bcrypt": "^5.0.1",
     "bookshelf": "^1.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
