--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node build/index.js",
     "dev": "nodemon",
     "build": "rm -rf build && tsc",
-    "lint": "eslint . --ext .ts",
+    "lint": "eslint . --ext .ts --fix",
     "test": "jest --watchAll"
   },
   "devDependencies": {
