--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
   "license": "MIT",
   "scripts": {
     "start": "node build/index.js",
-    "dev": "nodemon",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "rm -rf build && tsc",
     "lint": "eslint . --ext .ts --fix",
     "test": "jest --watchAll"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
     "@types/jest": "^27.0.2",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.13",
     "@types/pg": "^7.14.3",
@@ -30,6 +32,7 @@
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.5",
     "ts-node": "^8.10.2",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^3.9.5",
     "winston": "^3.2.1"
   },
@@ -40,6 +43,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.6",
     "morgan": "^1.10.0",
     "pg": "^8.2.1"
