--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,34 @@
-# This config is equivalent to both the '.circleci/extended/orb-free.yml' and the base '.circleci/config.yml'
 version: 2.1
 
-# Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
-# See: https://circleci.com/docs/2.0/orb-intro/
-orbs:
-  node: circleci/node@4.7
+jobs:
+  run_tests:
+    docker: 
+      - image: circleci/node:12
+    steps:
+      - checkout
+      - restore_cache: 
+          keys:
+            - v1-dependencies-{{checksum "package.json"}}
+            - v1-dependencies
+      - run:
+          name: "Install Dependencies"
+          command: |
+            yarn install
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{checksum "package.json"}}
+      - run: 
+          name: "Run Test"
+          command: |
+            yarn test:ci
+      - store_test_results:
+          path: test-results
+      - store_artifacts:
+          path: test-results
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  build_and_test:
     jobs:
-      - node/test:
-          # This is the node version to use for the `cimg/node` tag
-          # Relevant tags can be found on the CircleCI Developer Hub
-          # https://circleci.com/developer/images/image/cimg/node
-          version: '16.10'
-          # If you are using yarn, change the line below from "npm" to "yarn"
-          pkg-manager: npm
+      - run_tests
+
