--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "rm -rf build && tsc",
     "lint": "eslint . --ext .ts --fix",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "test:ci": "NODE_ENV=test jest --coverage --outputFile=test-result --json"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
