--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,10 @@
   "compilerOptions": {
     "allowJs": true,
     "target": "es2019",
-    "lib": [
-      "es2019"
-    ],
     "module": "commonjs",
-    "outDir": "build",
-    "strict": true,
+    "outDir": "dist",
     "esModuleInterop": true,
     "sourceMap": true,
-    "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "declaration": true,
     "declarationMap": true,
